Tue May  6 10:42:50 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAOACE.dsw:

          Put back some project dependencies that inadvertently got lost as 
          the result of a conflict update.

Tue May  6 08:54:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/PortableServer/Default_ORTC.h: Removed an extra include of
	  pre.h. 

Tue May 06 14:46:20 2003  Simon McQueen  <sm@prismtechnologies.com>

        * orbsvcs/LoadBalancer/LoadManager_Static.dsp:
        * orbsvcs/LoadBalancer/LoadManager.dsp:
        * orbsvcs/LoadBalancer/LoadMonitor.dsp:
        * orbsvcs/LoadBalancer/LoadMonitor_Static.dsp:

          Added TAO_Valuetype library to fix build errors.

Tue May  6 07:41:40 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Param_Test/Makefile: Updated dependencies.

Tue May  6 07:35:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/Content_Server/AMI_Observer/Makefile:
        * examples/Content_Server/AMI_Iterator/Makefile: Updated
	  dependecies.

Tue May 06 11:46:17 2003  Simon McQueen  <sm@prismtechnologies.com>

        * examples/Content_Server/AMI_Observer/Makefile:
        * examples/Content_Server/AMI_Iterator/Makefile:

          Fixed build errors.

Tue May 06 11:31:55 2003  Simon McQueen  <sm@prismtechnologies.com>

        * orbsvcs\tests\Notify\lib\TAO_NotifyTests_Static.dsp:

          Reset OutDir to '.'.

Mon May  5 21:24:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_union_branch/public_ch.cpp:
        * TAO_IDL/be/be_visitor_union_branch/public_ci.cpp:

          Added 'const' qualifier to the argument of the member
          mutator for CORBA::Object and CORBA::Any members. Thanks
          to Eric Malenfant <EMalenfant@interstarinc.com> for
          pointing out that the non-const reference parameter is
          non-compliant.

Mon May  5 17:45:36 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
